[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/entities/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://minigames/buried_search/buried_search_compass_minigame/compass.gd" type="Script" id=2]
[ext_resource path="res://minigames/buried_search/buried_search_compass_minigame/buried_search_compass_minigame.gd" type="Script" id=3]
[ext_resource path="res://minigames/buried_search/buried_search_compass_minigame/sounds/sand_shoveling.wav" type="AudioStream" id=4]
[ext_resource path="res://minigames/buried_search/buried_search_compass_minigame/sounds/chest_clunk.wav" type="AudioStream" id=5]

[node name="buried_search_compass_minigame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.7
color = Color( 0.858824, 0.784314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background"]
anchor_right = 1.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hit space to dig!"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2" type="ColorRect" parent="."]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.8
color = Color( 0.298039, 0.298039, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buried_search_compass_environment" type="Node2D" parent="."]
position = Vector2( 307.2, 120 )

[node name="player" parent="buried_search_compass_environment" instance=ExtResource( 1 )]
bot_right_bound = Vector2( 409.6, 300 )

[node name="compass" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
spin_speed = 720

[node name="north" type="Label" parent="compass"]
margin_left = -10.0
margin_top = -30.0
margin_right = 10.0
margin_bottom = -10.0
text = "N"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="east" type="Label" parent="compass"]
margin_left = 10.0
margin_top = -10.0
margin_right = 30.0
margin_bottom = 10.0
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="south" type="Label" parent="compass"]
margin_left = -10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 30.0
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="west" type="Label" parent="compass"]
margin_left = -30.0
margin_top = -10.0
margin_right = -10.0
margin_bottom = 10.0
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="needle" type="Polygon2D" parent="compass"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -2, 5, 2, 5, 2, -10, 5, -10, 0, -15, -5, -10, -2, -10 )

[node name="dig_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="clunk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
